fixed issue where header on desktop was the wrong colour for about, contact, portfolio pages.

--- a/styles/main.css
+++ b/styles/main.css
@@ -670,7 +670,7 @@ a.p-link {
   
   @supports (-moz-appearance:none) {
     .main-header {
-      background-color: #dbdfd7;
+      background-color: #f1f0f0;
     }
     .home .main-header {
       background-color: transparent;
